<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ResetPasswordActivity">

    <TextView
        android:id="@+id/txtViewResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewResetGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/reset_password_guide"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResetPassword" />

    <TextView
        android:id="@+id/txtViewEnterNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_new_password"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtViewResetGuide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtViewResetGuide"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResetGuide" />

    <EditText
        android:id="@+id/editTextNumberPassword1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/txtViewEnterNewPassword"
        app:layout_constraintStart_toStartOf="@+id/txtViewEnterNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtViewEnterNewPassword" />

    <EditText
        android:id="@+id/editTextNumberPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/txtViewReenterNewPassword"
        app:layout_constraintStart_toStartOf="@+id/txtViewReenterNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtViewReenterNewPassword" />

    <TextView
        android:id="@+id/txtViewReenterNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/reenter_new_password"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword1"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword1"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword1" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabReset"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>